added open source code link

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <link rel="stylesheet" href="src/styles.css" />
   </head>
   <body>
- <div class="container">
+    <div class="container">
       <form id="city-form">
         <input
           type="text"
@@ -97,5 +97,10 @@
       </div>
     </div>
 
+    <p id="author">
+      <a href="https://github.com/ivykolp/Weather-App-Project" target="_blank" id="open-source-link">
+        Open Source Code </a
+      >by Ivy Kolpon
+    </p>
   </body>
 </html>
