--- a/index.html
+++ b/index.html
@@ -25,8 +25,6 @@
       crossorigin="anonymous"
     ></script>
 
-    <script src="src/script.js"></script>
-
     <link rel="stylesheet" href="src/styles.css" />
   </head>
   <body>
@@ -98,9 +96,15 @@
     </div>
 
     <p id="author">
-      <a href="https://github.com/ivykolp/Weather-App-Project" target="_blank" id="open-source-link">
-        Open Source Code </a
-      >by Ivy Kolpon
+      <a
+        href="https://github.com/ivykolp/Weather-App-Project"
+        target="_blank"
+        id="open-source-link"
+      >
+        Open Source Code</a
+      >
+      by Ivy Kolpon
     </p>
+    <script src="src/script.js"></script>
   </body>
 </html>
