Updated date using timestamp function

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <h1 id="city"></h1>
         <div class="row city">
           <ul dayTime>
-            <span class="weekday-today" id="current-day"></span>
+            <span class="weekday-today" id="current-day"> Last updated </span>
             <span class="time" id="current-time"></span>
             <div class="weatherDescription" id="description"></div>
           </ul>
