updated JS to see weather icon instead of image

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
           <h2>
            <span>
                 <img 
-                src= "https://s3.amazonaws.com/shecodesio-production/uploads/files/000/034/150/original/sun.png?1652398867"
-                alt="Sunny"
+                src= ""
+                alt=""
                 id="icon"
                 class="icon"
             </img>
@@ -66,7 +66,7 @@
         </div>
 
         <ul>
-          <li><span id="weatherDescription"> Clear </span></li>
+          <li><span id="description"> Clear </span></li>
           <li>Humidity: <span id="humidity"></span>%</li>
           <li>Wind: <span id="wind"></span> km/h</li>
         </ul>
