removed auto-complete in html

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
             class="city-zip"
             placeholder="Search City or Zip"
             id="city-search"
+            auto-complete="off";
           />
           <button type="submit" class="btn btn-success button">
             <i class="fa-solid fa-magnifying-glass magnifying-glass"></i>
