Add links for Celsius & Fahrenheit & changed JS to send imperial

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
         </span>
               <span>
                 <span class="temperature" id="temperature"></span>
-                <span class="units">°C </span>
-              </span>
+                <span class="units"> <a href="#" id="celsius">   °C </a>| <a href="#" class="units" id="fahrenheit">°F</a></span>
+              </span></span> 
           </h2>
         </div>
 
