implemented the unit converter

--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
                 class="icon"
             </img>
         </span>
-              <span>
+              <span class="weather-temperature">
                 <span class="temperature" id="temperature"></span>
-                <span class="units"> <a href="#" id="celsius">   °C </a>| <a href="#" class="units" id="fahrenheit">°F</a></span>
-              </span></span> 
+                <span class="units"> <a href="#" id="celsius">   °C </a>| <a href="#" id="fahrenheit" class="active" >°F</a></span>
+              </span> 
           </h2>
         </div>
 
