--- a/index.html
+++ b/index.html
@@ -71,39 +71,25 @@
           <li>Humidity: <span id="humidity"></span>%</li>
           <li>Wind: <span id="wind"></span> km/h</li>
         </ul>
-
-        <div class="row days">
-          <div class="col">F</div>
-          <div class="col">Sa</div>
-          <div class="col">Su</div>
-          <div class="col">M</div>
-          <div class="col">Tu</div>
-        </div>
-
+<div class=""weather-forecast">
         <div class="row">
-          <div class="col">
-            <i class="fa-solid fa-cloud-sun-rain weather-icon"></i>
-          </div>
-          <div class="col">
-            <i class="fa-solid fa-cloud weather-icon"></i>
-          </div>
-          <div class="col">
-            <i class="fa-solid fa-snowflake weather-icon"></i>
-          </div>
-          <div class="col">
-            <i class="fa-solid fa-sun weather-icon"></i>
-          </div>
-          <div class="col">
-            <i class="fa-solid fa-cloud-sun weather-icon"></i>
-          </div>
-        </div>
+          <div class="col-2">
+              <div class="weather-forecast-date">Sa </div>
+              <img 
+              src="http://openweathermap.org/img/wn/10d@2x.png"
+              alt=""
+              wid="36"
+              />
+              <div class="weather-forecast-temperature">
+                  <span class="weather-forecast-tempearture-max"> 18° </span> |
+                  <span class="weather-forecast-temperature-min"> 12° </span>
+              </div>
 
-        <div class="row daily-temp">
-          <div class="col">55°F</div>
-          <div class="col">40°F</div>
-          <div class="col">32°F</div>
-          <div class="col">70°F</div>
-          <div class="col">65°F</div>
+          </div>
+         
+
+
+   
         </div>
       </div>
     </div>
