Fixed CSS of forecast

--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
               wid="36"
               />
               <div class="weather-forecast-temperature">
-                  <span class="weather-forecast-tempearture-max"> 18° </span> |
-                  <span class="weather-forecast-temperature-min"> 12° </span>
+                  <div class="weather-forecast-tempearture-max"> 18° </div>
+                  <div class="weather-forecast-temperature-min"> 12° </div>
               </div>
 
           </div>
