--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <li>Humidity: <span id="humidity"></span>%</li>
           <li>Wind: <span id="wind"></span> km/h</li>
         </ul>
-<div class=""weather-forecast">
+<div class="weather-forecast" id="forecast">
         <div class="row">
           <div class="col-2">
               <div class="weather-forecast-date">Sa </div>
@@ -81,15 +81,11 @@
               wid="36"
               />
               <div class="weather-forecast-temperature">
-                  <div class="weather-forecast-tempearture-max"> 18° </div>
-                  <div class="weather-forecast-temperature-min"> 12° </div>
+                  <span class="weather-forecast-tempearture-max"> 18° </span>
+                  <span class="weather-forecast-temperature-min"> 12° </span>
               </div>
 
           </div>
-         
-
-
-   
         </div>
       </div>
     </div>
