Removed celsius conversion

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </span>
               <span class="weather-temperature">
                 <span class="temperature" id="temperature"></span>
-                <span class="units"> <a href="#" id="celsius">   °C </a>| <a href="#" id="fahrenheit" class="active" >°F</a></span>
+                <span class="units"> °F</span>
               </span> 
           </h2>
         </div>
