changed time to 12 hours

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <h1 id="city"></h1>
         <div class="row city">
           <ul dayTime>
-            <span class="weekday-today" id="current-day"> Last updated </span>
+            <span class="current-day" id="current-day"> Last updated </span>
             <span class="time" id="current-time"></span>
           </ul>
 
@@ -68,8 +68,10 @@
 
         <ul>
           <li><span id="description"> Clear </span></li>
+         <em>
           <li>Humidity: <span id="humidity"></span>%</li>
-          <li>Wind: <span id="wind"></span> km/h</li>
+          <li>Wind: <span id="wind"></span> m/h</li>
+        </em>
         </ul>
 <div class="weather-forecast" id="forecast">
         <div class="row">
