added LinkedIn profile to name

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       >
         Open Source Code</a
       >
-      by Ivy Kolpon
+      by <span class="name"> <strong> <a href="https://www.linkedin.com/in/ivykolpon/" target="_blank">Ivy Kolpon </a></strong></span> 
     </p>
     <script src="src/script.js"></script>
   </body>
