updated form language

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <input
             type="text"
             class="city-zip"
-            placeholder="Search City or Zip"
+            placeholder="Search City"
             id="city-search"
             auto-complete="off";
           />
